[build-system]
build-backend = "cmeel.build"
requires = ["cmeel[build]", "cmeel-boost == 1.81.0", "cmeel-console-bridge == 1.0.2.1", "cmeel-tinyxml == 2.6.2.1",
"cmeel-urdfdom-headers == 1.1.0", "cmeel-urdfdom == 3.1.0.2", "casadi == 3.6.3", "eigenpy == 3.0.0", "cmeel-eigen == 3.4.0.1", "cmeel-assimp == 5.2.5",
"cmeel-octomap == 1.9.8.1", "numpy == 1.24.0"]

[project]
dependencies = ["cmeel-boost == 1.81.0", "cmeel-console-bridge == 1.0.2.1", "cmeel-tinyxml == 2.6.2.1",
"cmeel-urdfdom-headers == 1.1.0",
"cmeel-urdfdom == 3.1.0.2", "casadi == 3.6.3", "eigenpy == 3.0.0", "cmeel-eigen == 3.4.0.1", "cmeel-assimp == 5.2.5",
"cmeel-octomap == 1.9.8.1", "numpy == 1.24.0"]
description = "A fast and flexible implementation of Rigid Body Dynamics algorithms and their analytical derivatives - TEMPORARY PACKAGE"
license = "BSD-3-Clause"
name = "pin3x-jnrh"
version = "2.9.2"

[project.urls]
homepage = "https://github.com/stack-of-tasks/pinocchio"

[tool.cmeel]
build-number = 1
run-tests = false

[tool.tomlsort]
all = true
